force-app/main/default/objects/Assign_Resource_History__c/Assign_Resource_History__c.object-meta.xml
<CustomObject>
    <label>Assigned Resource History</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Assigned Resource History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assigned Resource History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>