force-app/main/default/objects/Assign_Resource_History__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <label>Event</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Removed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>