force-app/main/default/objects/Assign_Resource_History__c/fields/Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>Resource_Name__c</fullName>
    <label>Resource Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>