force-app/main/default/objects/Assign_Resource_History__c/fields/SchedEndTime__c.field-meta.xml
<CustomField>
    <fullName>SchedEndTime__c</fullName>
    <label>SchedEndTime</label>
    <type>DateTime</type>
</CustomField>