force-app/main/default/objects/Assign_Resource_History__c/fields/SchedStartTime__c.field-meta.xml
<CustomField>
    <fullName>SchedStartTime__c</fullName>
    <label>SchedStartTime</label>
    <type>DateTime</type>
</CustomField>