force-app/main/default/objects/Assign_Resource_History__c/fields/Service_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Service_Appointment__c</fullName>
    <label>Service Appointment</label>
    <referenceTo>ServiceAppointment</referenceTo>
    <relationshipLabel>Assigned Resource History</relationshipLabel>
    <relationshipName>Assigned_Resource_History</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>