force-app/main/default/objects/Assign_Resource_History__c/fields/Service_Appointment_Id__c.field-meta.xml
<CustomField>
    <fullName>Service_Appointment_Id__c</fullName>
    <label>Service Appointment Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>