force-app/main/default/objects/Assign_Resource_History__c/fields/Service_Appointment_Status__c.field-meta.xml
<CustomField>
    <fullName>Service_Appointment_Status__c</fullName>
    <label>Service Appointment Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>